--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     
     </div>
-    <img src="fun-3d-cartoon-teenage-boy-removebg-preview.png" alt="Abhishek Nashirkar" class="profile-image">  
+   <img src="https://i.gifer.com/4AIB.gif" alt="Abhishek Nashirkar" class="profile-image"> 
   </section>
 
   <section id = "about-section">
