--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </div>
           <h3 class="project-heading">Landing Page: Sarthi</h3>
           <p class="project-description">Our home automation smart speaker's landing page showcases its features and benefits with a sleek design, captivating potential customers. The user-friendly interface highlights its elegant design and seamless integration into any home decor.</p>
-          <a href="https://github.com/Abhisek2512/OIBSIP/tree/e6140d2b0ba021a9d9d28bc0d67c6e59fdc83502/TASK1/LANDING_PAGE" class="project-button">View Details</a>
+          <a href="https://abhisek2512.github.io/Sarthi/" class="project-button">View Details</a>
       </div>
 <div class="project">
   <div class="image-container">
