--- a/index.html
+++ b/index.html
@@ -48,13 +48,11 @@
     </div>
     
     </div>
-   <img src="https://i.gifer.com/4AIB.gif" alt="Abhishek Nashirkar" class="profile-image"> 
+  
   </section>
 
   <section id = "about-section">
   <div class="about-section">
-    <img src="abhi.jpg" alt="About Me">
-   
     <div class="wrapper">
     <div class="myself">
     <h2>About Me</h2>
@@ -143,7 +141,7 @@
       </div>
       <h3 class="project-heading">INCOGNITO-Web</h3>
       <p class="project-description">INCOGNITO is a cybersecurity platform offering insights and resources on hacking, prevention, and ethical hacking. It provides articles and tutorials to educate visitors about the risks and protection measures, covering topics like mobile security, ethical hacking, and cyber security.</p>
-      <a href="https://incognitowebtechhub.000webhostapp.com/" class="project-button">View Details</a>
+      <a href="https://incognitowebtechhub.000webhostapp.com/" target="_blank" class="project-button">View Details</a>
   </div>
   <div class="project">
     <div class="image-container">
@@ -151,7 +149,7 @@
     </div>
     <h3 class="project-heading">Sarthi:Smart-BOT <br>By Using:Chat-Gpt</h3>
     <p class="project-description">Sarthi is a Python-based voice-controlled assistant with a wide range of capabilities. From sending WhatsApp messages to playing YouTube videos, it automates tasks and offers information using speech recognition and text-to-speech conversion.</p>
-    <a href="https://github.com/Abhisek2512/ChatGPT-Bot" class="project-button">View Details</a>
+    <a href="https://github.com/Abhisek2512/ChatGPT-Bot" target="_blank"class="project-button">View Details</a>
 </div>
         <div class="project">
           <div class="image-container">
@@ -159,7 +157,7 @@
           </div>
           <h3 class="project-heading">Landing Page: Sarthi</h3>
           <p class="project-description">Our home automation smart speaker's landing page showcases its features and benefits with a sleek design, captivating potential customers. The user-friendly interface highlights its elegant design and seamless integration into any home decor.</p>
-          <a href="https://abhisek2512.github.io/Sarthi/" class="project-button">View Details</a>
+          <a href="https://abhisek2512.github.io/Sarthi/"  target="_blank" class="project-button">View Details</a>
       </div>
 <div class="project">
   <div class="image-container">
@@ -167,7 +165,7 @@
   </div>
   <h3 class="project-heading">Portfolio-Website</h3>
   <p class="project-description">Explore my portfolio website to witness my internship journey, showcasing skills, accomplishments, and growth. Experience a clean and professional design that reflects dedication and attention to detail, with easy navigation and a glimpse into my diverse industry experiences and project contributions.</p>
-  <a href="https://github.com/Abhisek2512/OIBSIP/tree/e6140d2b0ba021a9d9d28bc0d67c6e59fdc83502/TASK2/Portfolio" class="project-button">View Details</a>
+  <a href="https://github.com/Abhisek2512/OIBSIP/tree/e6140d2b0ba021a9d9d28bc0d67c6e59fdc83502/TASK2/Portfolio" target="_blank"class="project-button">View Details</a>
 </div>
       <div class="project">
           <div class="image-container">
@@ -175,12 +173,76 @@
           </div>
           <h3 class="project-heading">Temperature Converter website</h3>
           <p class="project-description">Experience seamless temperature conversions on the Temperature Converter website. With a user-friendly interface and optimized design, effortlessly convert temperatures with a few clicks. The homepage features a straightforward layout, showcasing the main conversion tool for easy input and selection of temperature units.</p>
-          <a href="https://github.com/Abhisek2512/OIBSIP/tree/e6140d2b0ba021a9d9d28bc0d67c6e59fdc83502/TASK3/temprature_calculator" class="project-button">View Details</a>
+          <a href="https://github.com/Abhisek2512/OIBSIP/tree/e6140d2b0ba021a9d9d28bc0d67c6e59fdc83502/TASK3/temprature_calculator" target="_blank" class="project-button">View Details</a>
       </div>
       <!-- Add more project sections as needed -->
   </div>
   </section>
 
+
+
+  <div id="certifications">
+
+    <h1 style="text-align: center;font-size: 34px; background: linear-gradient(45deg, #FFC700, #FF5050);-webkit-background-clip: text;-webkit-text-fill-color: transparent;">Certificates</h1>
+    <section class="certificate">
+      <div class="certificate-image">
+          <img src="certificate/hackerrank.jpg" alt="Certificate 1">
+      </div>
+      <div class="certificate-details">
+          <h2>HackerRank: JAVA Basic</h2>
+          <p>Date: December 25, 2023</p>
+          <p>HackerRank</p>
+          <a href="https://www.hackerrank.com/certificates/7a8067d1c13d" target="_blank" class="project-button">View Certificate</a>
+      </div>
+  </section>
+  
+  <section class="certificate">
+      <div class="certificate-image">
+          <img src="certificate/html.jpg" alt="Certificate 2">
+      </div>
+      <div class="certificate-details">
+          <h2>Introduction to Cloud Development with HTML, CSS, and JavaScript</h2>
+          <p>Date: May 02, 2022</p>
+          <p>Issuing Organization: IBM</p>
+          <a href="https://courses.edx.org/certificates/3e2bf1c02eac4d89a1fd9f8027b8affb" target="_blank"class="project-button">View Certificate</a>
+      </div>
+  </section><section class="certificate">
+    <div class="certificate-image">
+        <img src="certificate/linux.jpg" alt="Certificate 1">
+    </div>
+    <div class="certificate-details">
+        <h2>Introduction to Linux</h2>
+        <p>Date: February 11, 2022</p>
+        <p>Issuing Organization: The Linux Foundation </p>
+        <a href="https://courses.edx.org/certificates/5221f8e720bc442ab2bf9000cda72d98"target="_blank" class="project-button">View Certificate</a>
+    </div>
+  </section>
+  
+  <section class="certificate">
+    <div class="certificate-image">
+        <img src="certificate/python.jpg" alt="Certificate 2">
+    </div>
+    <div class="certificate-details">
+        <h2>Python Basic For Data Science</h2>
+        <p>Date: February 10, 2022</p>
+        <p>Issuing Organization: IBM</p>
+        <a href="https://courses.edx.org/certificates/5f5eb122abbf40a8a093843cbb573210" target="_blank"class="project-button">View Certificate</a>
+    </div>
+  </section><section class="certificate">
+    <div class="certificate-image">
+        <img src="certificate/cloud computiing.jpg" alt="Certificate 1">
+    </div>
+    <div class="certificate-details">
+        <h2>Introduction To Cloud Computing</h2>
+        <p>Date: February 10, 2022</p>
+        <p>Issuing Organization: IBM</p>
+        <a href="https://courses.edx.org/certificates/a7314ae583d44f70a55ad282526fd3c5" target="_blank" class="project-button">View Certificate</a>
+    </div>
+  </section>
+  
+ 
+  
+  </div>
   
   <footer>
     <div class="footer-content">
