--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <h1 style="text-align: center;font-size: 34px; background: linear-gradient(45deg, #FFC700, #FF5050);-webkit-background-clip: text;-webkit-text-fill-color: transparent;">Certificates</h1>
     <section class="certificate">
       <div class="certificate-image">
-          <img src="certificate/hackerrank.jpg" alt="Certificate 1">
+          <img src="hackerrank.jpg" alt="Certificate 1">
       </div>
       <div class="certificate-details">
           <h2>HackerRank: JAVA Basic</h2>
@@ -198,7 +198,7 @@
   
   <section class="certificate">
       <div class="certificate-image">
-          <img src="certificate/html.jpg" alt="Certificate 2">
+          <img src="html.jpg" alt="Certificate 2">
       </div>
       <div class="certificate-details">
           <h2>Introduction to Cloud Development with HTML, CSS, and JavaScript</h2>
@@ -208,7 +208,7 @@
       </div>
   </section><section class="certificate">
     <div class="certificate-image">
-        <img src="certificate/linux.jpg" alt="Certificate 1">
+        <img src="linux.jpg" alt="Certificate 1">
     </div>
     <div class="certificate-details">
         <h2>Introduction to Linux</h2>
@@ -220,7 +220,7 @@
   
   <section class="certificate">
     <div class="certificate-image">
-        <img src="certificate/python.jpg" alt="Certificate 2">
+        <img src="python.jpg" alt="Certificate 2">
     </div>
     <div class="certificate-details">
         <h2>Python Basic For Data Science</h2>
@@ -230,7 +230,7 @@
     </div>
   </section><section class="certificate">
     <div class="certificate-image">
-        <img src="certificate/cloud computiing.jpg" alt="Certificate 1">
+        <img src="cloud computiing.jpg" alt="Certificate 1">
     </div>
     <div class="certificate-details">
         <h2>Introduction To Cloud Computing</h2>
